# StarAgent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: install-service.sh  staragent-ingest.service  staragent-ingest.timer  staragent.service
docs/: data-sources.md
src/star_agent/: __init__.py  bot.py  config.py  main.py
src/star_agent/agent/: __init__.py  prompts.py  service.py  tools.py  uex_tools.py
src/star_agent/cogs/: __init__.py  admin.py  ask.py
src/star_agent/ingestion/: __init__.py  build_index.py  chunker.py  loaders.py
src/star_agent/ingestion/sources/: __init__.py  base.py  rsi_ship_matrix.py  star_citizen_wiki.py  uex.py
src/star_agent/mcp/: __init__.py  server.py
src/star_agent/rag/: __init__.py  embeddings.py  retriever.py  store.py
